修正租車及評論CRUD

--- a/src/main/resources/static/css/vertical-layout-light/style.css
+++ b/src/main/resources/static/css/vertical-layout-light/style.css
@@ -32959,7 +32959,7 @@ div.tagsinput span.tag a {
 }
 
 .sidebar .nav.sub-menu .nav-item .nav-link.active {
-  color: #ffffff;
+  color: #d15f08;
   background: transparent;
 }
 
