--- a/src/main/resources/templates/backend/comment-form.html
+++ b/src/main/resources/templates/backend/comment-form.html
@@ -125,6 +125,9 @@ img {
 												</div>
 											</div>
 											<div class="row justify-content-end"> 
+<!-- 											<div class="row justify-content-end" th:if="${images != null}">  -->
+<!-- 											<div class="row justify-content-end" th:if="${not #lists.isEmpty(images)}"> -->
+<!-- 											<div class="row justify-content-end" th:unless="${#lists.isEmpty({images})}">  -->
 	                        <div class="col-sm-9">
 		                        <div class="row">        
         											<label for="imagesFromDB"></label>
@@ -140,10 +143,10 @@ img {
 													<div class="row" id="formFile"></div>
 												</div>
 											</div>
-											<div class="d-flex justify-content-end">
-												<button id="btn-insert" type="submit"	class="btn btn-primary btn-rounded mr-2 justify-content-end mr-4  font-weight-bold">送出評論</button>
+											<div class="d-flex justify-content-end mb-4">
+												<button id="btn-insert" type="submit"	class="btn btn-primary btn-rounded mr-2 justify-content-end mr-4  font-weight-bold">儲存資料</button>
 												<!-- <button class="btn btn-light justify-content-end">取消新增</button> -->
-												<a class="btn btn-light justify-content-end" href="comment">取消新增</a>
+												<a class="btn btn-light justify-content-end" th:href="@{/backend/comments}">回上一頁</a>
 											</div>
 										</div>
 									</form>
@@ -173,8 +176,48 @@ img {
 	<!--   <script src="../../js/typeahead.js"></script> -->
 	<!--   <script src="../../js/select2.js"></script> -->
 	<script th:src="@{/vendors/sweetalert/sweetalert.min.js}"></script>
+	<script th:src="@{//cdn.jsdelivr.net/npm/sweetalert2@11}"></script>
 	<script th:src="@{/js/comment.js}"></script>
+	<script>
+	$(function() {
+        let contentMax = 200;
+        let imagefilesMax = 3;
 
+    		let contentLength = $("#content").val().length;
+        $("#content-length").text('('+contentLength+'/'+contentMax+')');
+        
+        // 確認表單內容
+        $('#btn-insert').click(function (e) {
+            let isItemTbValid = $('#itemTb').val() !== null;
+            let isItemIdVaild = $('#itemId').val() !== '';
+            let isUserIdVaild = $('#userId').val() !== '';
+            let isContentVaild = $("#content").val().length <= contentMax;
+            let isimagefilesVaild = $("#imagefiles")[0].files.length <= imagefilesMax;
+            
+            if (!isItemTbValid || !isItemIdVaild || !isUserIdVaild || !isContentVaild || !isimagefilesVaild ) {
+                e.preventDefault();					
+                isItemTbValid ? hideInvalidText($('#itemTb')) : showInvalidText($('#itemTb'));
+                isItemIdVaild ? hideInvalidText($('#itemId')) : showInvalidText($('#itemId'));
+                isUserIdVaild ? hideInvalidText($('#userId')) : showInvalidText($('#userId'));
+                isContentVaild ? hideInvalidText($('#content')) : showInvalidText($('#content'));
+                isimagefilesVaild ? hideInvalidText($('#imagefiles')) : showInvalidText($('#imagefiles'));
+                $("form").addClass('validated');
+            } else {
+               e.preventDefault();		
+                 Swal.fire({
+                   icon: 'success',
+                   title: '儲存成功',
+                   showConfirmButton: false,
+                   timer: 1500
+                 });
+                 
+                 setInterval(function() {
+                     $('#insertForm').submit()
+                 }, 1500);
+            }
+        });
+	})
+	</script>
 	<!-- End custom js for this page-->
 </body>
 
