--- a/src/main/resources/templates/backend/partials/fragment.html
+++ b/src/main/resources/templates/backend/partials/fragment.html
@@ -14,10 +14,10 @@
 <body>
 	<nav th:fragment="navbar" class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
 		<div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-			<a class="navbar-brand brand-logo mr-5" href="index.html"> 
+			<a class="navbar-brand brand-logo mr-5" th:href="@{/index}"> 
 				<img th:src="@{/images/logo.svg}" src="images/logo.svg" class="mr-2" alt="logo" />
 			</a> 
-			<a class="navbar-brand brand-logo-mini" href="index.html"> 
+			<a class="navbar-brand brand-logo-mini" th:href="@{/index}"> 
 				<img th:src="@{/images/logo-mini.svg}" src="images/logo-mini.svg" alt="logo" />
 			</a>
 		</div>
@@ -302,8 +302,8 @@
             </a>
             <div class="collapse" id="item">
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" th:href="@{/backend/car/models}">車款管理</a></li>
-                <li class="nav-item"> <a class="nav-link" th:href="@{/backend/car/locations}">地點管理</a></li>
+                <li class="nav-item"> <a class="nav-link" th:href="@{/backend/cars/models}">車款管理</a></li>
+                <li class="nav-item"> <a class="nav-link" th:href="@{/backend/cars/locations}">地點管理</a></li>
               </ul>
             </div>
           </li>
