--- a/src/main/resources/templates/frontend/car-detail.html
+++ b/src/main/resources/templates/frontend/car-detail.html
@@ -713,6 +713,10 @@
 	<div th:replace="frontend/partials/fragment :: modal1"></div>	
 	<!-- javascript -->
 	<div th:replace="frontend/partials/fragment :: script"></div>
+	
+	<script th:src="@{https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js}"></script>
+	<script th:src="@{/js/clusterMap.js}" src="js/clusterMap.js"></script>
+	<script th:src="@{https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-language/v1.0.0/mapbox-gl-language.js}"></script>
 	<script>
 	  $(document).ready(function() {
 			$.ajax({
