--- a/src/main/resources/templates/backend/comment-list.html
+++ b/src/main/resources/templates/backend/comment-list.html
@@ -39,6 +39,7 @@
               <div class="card">
                 <div class="card-body">
                   <div class="card-title">評論列表</div>
+                  <a class="btn btn-primary justify-content-end  my-2" th:href="@{/backend/comments/form}">新增評論</a>
                   <div class="table-responsive">
                     <table id="comment-table" class="display expandable-table w-100">
                       <colgroup>
