--- a/src/main/resources/templates/backend/partials/fragment.html
+++ b/src/main/resources/templates/backend/partials/fragment.html
@@ -271,25 +271,25 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" th:href="@{/backend/orders}">
+            <a class="nav-link" th:href="@{/order/orderlist}">
               <i class="icon-paper menu-icon"></i>
               <span class="menu-title">訂單管理</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" th:href="@{/backend/tickets}">
+            <a class="nav-link" th:href="@{/ticketList}">
               <i class="icon-image menu-icon"></i>
               <span class="menu-title">票券管理</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" th:href="@{/backend/restaurants}">
+            <a class="nav-link" th:href="@{/backend/index}">
               <i class="icon-flag menu-icon"></i>
               <span class="menu-title">餐廳管理</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" th:href="@{/backend/hotels}">
+            <a class="nav-link" th:href="@{/hotel/hotel123}">
               <i class="icon-briefcase menu-icon"></i>
               <span class="menu-title">住宿管理</span>
             </a>
@@ -308,11 +308,7 @@
             </div>
           </li>
           <li class="nav-item">
-<<<<<<< HEAD
             <a class="nav-link" th:href="@{/backend/comments}">
-=======
-            <a class="nav-link" th:href="@{/comments}">
->>>>>>> e4f9a1113b9201e9af971060d93cd1e89c5edc91
               <i class="icon-speech-bubble menu-icon"></i>
               <span class="menu-title">評論管理</span>
             </a>
