--- a/src/main/resources/templates/backend/car-list.html
+++ b/src/main/resources/templates/backend/car-list.html
@@ -38,6 +38,7 @@
               <div class="card">
                 <div class="card-body">
                   <div class="card-title">車款列表</div>
+                  <a class="btn btn-primary justify-content-end my-2" th:href="@{/backend/cars/form}">新增車款</a>
                   <div class="table-responsive">
                     <table id="data-table" class="display expandable-table w-100"  style="text-align: center">
 <!--                       <colgroup> -->
