--- a/src/main/resources/templates/frontend/HotelIndex.html
+++ b/src/main/resources/templates/frontend/HotelIndex.html
@@ -16,8 +16,162 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/hotelCSS/fullpage.css}">
     <link rel="stylesheet" th:href="@{/css/hotelCSS/custom.css}">
+	 <style th:inline="text">
 
+        @font-face {
+          font-family: 'Gotham Medium';
+          src: url('Gotham-Medium.woff2') format('woff2'),
+          url('Gotham-Medium.woff') format('woff');
+          font-weight: 500;
+          font-style: normal;
+          font-display: swap;
+        }
+
+        @font-face {
+          font-family: 'Gotham Book';
+          src: url('Gotham-Book.woff2') format('woff2'),
+          url('Gotham-Book.woff') format('woff');
+          font-weight: 500;
+          font-style: normal;
+          font-display: swap;
+        }
+        h1,h2,h3,h4,h5,h6{
+          font-family: 'Gotham Medium';
+        }
+        p, span, li, a{
+          font-family: 'Gotham Book';
+        }
+        .logo{
+          width: 100px;
+          position: absolute;
+          top: 20px;
+          left: 20px;
+        }
+        .section{
+          width: 100%;
+          height: 100vh;
+          position: relative;
+        }
+        #slide1{
+          background-image: url("[[@{/images/hotels/vacation.jpg}]]");
+          background-size: cover;
+          background-position: center;
+        }
+        #slide2{
+          background-image: url("[[@{/images/hotels/house.jpeg}]]");
+          background-size: cover;
+          background-position: center;
+        }
+        #slide3{
+          background-image: url("[[@{/images/hotels/hotel-taipei-marriott.jpg}]]");
+          background-size: cover;
+          background-position: center;
+        }
+        #slide4{
+          background-image: url("[[@{/images/hotels/woodHouse.jpg}]]");
+          background-size: cover;
+          background-position: center;
+        }
+
+        #slide5{
+          background-image: url("[[@{/images/hotels/sleeping3.jpg}]]");
+          background-size: cover;
+          background-position: center;
+        }
+        .nav2{
+          position: absolute;
+          top:9px;
+          right:20px;
+        }
+        .upper{
+          padding-top: 110px;
+        }
+        .upper h2{
+          font-size: 41px;
+          margin-bottom: 0px;
+        }
+        .upper p{
+          font-size: 14px;
+          color:black;
+        }
+        .upper p a{
+          color:black;
+        }
+        .navbar-light .navbar-nav .nav-link {
+          color: black;
+          margin-left: 3px;
+          margin-right: 3px;
+          text-transform: uppercase;
+          font-weight: 800;
+          font-size: 13px;
+          letter-spacing: 1px;
+        }
+        .lower .btn1 {
+          background: #171a20;
+          color: white;
+          padding: 10px 40px;
+          border-radius: 30px;
+          font-size: 12px;
+          width: 250px;
+          display: inline-block;
+          text-align: center;
+          text-decoration: none;
+          margin: 0 8px;
+        }
+        .lower .btn2 {
+          background: rgba(255,255,255,0.5);
+          color: black;
+          padding: 10px 40px;
+          border-radius: 30px;
+          font-size: 12px;
+          width: 250px;
+          display: inline-block;
+          text-align: center;
+          text-decoration: none;
+          margin: 0 8px;
+        }
+        .lower .arrow{
+          margin-top:0px;
+          display: inline-block;
+        }
+        .lower{
+          position: absolute;
+          bottom:20px;
+          text-align: center;
+          width: 100%;
+          margin-left: auto;
+          margin-right: auto;
+          left: 0;
+          right: 0;
+        }
+        .fp-tableCell{
+          display: table-cell;
+          vertical-align: top;
+        }
+        .upper h2,.upper p ,.lower .btn1, .lower .btn2,.lower .arrow{
+          opacity: 0;
+          visibility: hidden;
+        }
+        @media only screen and (max-width:990px){
+          .logo {
+            width: 100px;
+            position: absolute;
+            top: 20px;
+            left: auto;
+            right: 20px;
+          }
+          .navbar{
+            background: white;
+          }
+          .nav2{
+            position: relative;
+            right:auto;
+            top:0px;
+          }
+        }
+      </style>
     <title>kenny web!</title>
+   
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
@@ -33,7 +187,7 @@
             <ul class="navbar-nav mx-auto">
               
               <li class="nav-item">
-                <a class="nav-link" href="#">Hotel S</a>
+               <a class="nav-link" href="/gotrip/hotel/hotel123">Hotel S</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Restaurant 3</a>
