--- a/src/main/resources/templates/backend/ticketList.html
+++ b/src/main/resources/templates/backend/ticketList.html
@@ -2,354 +2,181 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>GoTrip後台管理</title>
-<!-- 通用css樣式 plugins:css -->
-<link rel="stylesheet" th:href="@{/css/vertical-layout-light/style.css}"
-	href="css/vertical-layout-light/style.css">
-<link rel="stylesheet"
-	th:href="@{/vendors/ti-icons/css/themify-icons.css}"
-	href="vendors/ti-icons/css/themify-icons.css">
-<link rel="stylesheet" th:href="@{/vendors/feather/feather.css}"
-	href="vendors/feather/feather.css">
-<link rel="shortcut icon" th:href="@{/images/favicon.png}" />
-<!-- 本頁面使用css樣式 Plugin css for this page -->
-<link rel="stylesheet"
-	th:href="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.css}"
-	href="vendors/datatables.net-bs4/dataTables.bootstrap4.css">
-<link rel="stylesheet" th:href="@{/js/select.dataTables.min.css}"
-	href="vendors/datatables.net-bs4/select.dataTables.min.css">
-<!-- TABLE -->
-<link rel="stylesheet"
-	th:href="@{/css/tickeTableStyle/bootstrap.min.css}">
-<link rel="stylesheet"
-	th:href="@{/css/ticketTableStyle/bootstrap.min.table.css}">
-<link rel="stylesheet" th:href="@{/css/ticketTableStyle/jstable.css}">
-<!-- JSON CSV CSS -->
-<!-- <link rel="stylesheet" th:href="@{/css/ticketTableStyle/bootstrap.min.css}"> -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>GoTrip後台管理</title>
+	<!-- 通用css樣式 plugins:css -->
+	<link rel="stylesheet" th:href="@{/css/vertical-layout-light/style.css}" href="css/vertical-layout-light/style.css">
+	<link rel="stylesheet" th:href="@{/vendors/ti-icons/css/themify-icons.css}"
+		href="vendors/ti-icons/css/themify-icons.css">
+	<link rel="stylesheet" th:href="@{/vendors/feather/feather.css}" href="vendors/feather/feather.css">
+	<link rel="shortcut icon" th:href="@{/images/favicon.png}" />
+	<!-- 本頁面使用css樣式 Plugin css for this page -->
+	<link rel="stylesheet" th:href="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.css}"
+		href="vendors/datatables.net-bs4/dataTables.bootstrap4.css">
+	<link rel="stylesheet" th:href="@{/js/select.dataTables.min.css}"
+		href="vendors/datatables.net-bs4/select.dataTables.min.css">
+	<!-- TABLE -->
+	<link rel="stylesheet" th:href="@{/css/tickeTableStyle/bootstrap.min.css}">
+	<link rel="stylesheet" th:href="@{/css/ticketTableStyle/bootstrap.min.table.css}">
+	<link rel="stylesheet" th:href="@{/css/ticketTableStyle/jstable.css}">
+	<!-- JSON CSV CSS -->
+	<!-- <link rel="stylesheet" th:href="@{/css/ticketTableStyle/bootstrap.min.css}"> -->
 
-<style type="text/css">
-.img-com {
-	object-fit: cover;
-	width: 70px;
-	height: 70px;
-}
-/* 字數太長 */
-#textMain {
-	display: inline-block;
-	/* background: yellow; */
-}
 
-#menu {
-	float: right;
-	/* background: red; */
-}
-
-.noText {
-	width: 100%;
-	overflow: none;
-	white-space: normal;
-}
-
-.showText {
-	width: 87%;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-}
-
-.none {
-	display: none;
-}
-
-/* 字數太長隱藏 */
-.box {
-	width: 300px;
-	padding: 10px;
-	border: #4caf50 2px solid;
-}
-
-.ellipsis {
-	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	display: -webkit-box;
-	-webkit-line-clamp: 2;
-	-webkit-box-orient: vertical;
-	white-space: normal;
-}
-</style>
+	<style type="text/css">
+		.img-com {
+			object-fit: cover;
+			width: 70px;
+			height: 70px;
+		}
+	</style>
 </head>
 
 <body>
 	<div class="container-scroller">
 
 		<nav th:replace="backend/partials/fragment :: navbar"></nav>
-
 		<div class="container-fluid page-body-wrapper">
 			<div th:replace="backend/partials/fragment :: setting"></div>
 			<nav th:replace="backend/partials/fragment :: sidebar"></nav>
 			<!-- 主要內容 partial -->
 			<div class="main-panel">
 				<div class="content-wrapper">
-
 					<div class="row">
 						<div class="col-md-12 grid-margin stretch-card">
 							<div class="card">
 								<div class="card-body">
-									<!-- 									<div class="page-header"> -->
-									<h2>景點列表</h2>
-									<div class="table-responsive">
-										<div class="alert alert-warning alert-dismissible fade show"
-											role="alert" th:unless="${#strings.isEmpty(message)}">
-											<a href="#" class="btn-close" data-dismiss="alert"
-												aria-label="Close">&times;</a> <strong>恭喜，</strong> <span
-												th:text="${message}">信息提交成功</span>
+									<div class="page-header">
+										<h2>
+											景點列表
+										</h2>
+										<div class="alert alert-success alert-dismissable fade in"
+											th:unless="${#strings.isEmpty(message)}">
+											<a href="#" class="close" data-dismiss="alert">&times;</a>
+											<strong>恭喜，</strong>
+											<span th:text="${message}">信息提交成功</span>
 										</div>
 										<!--新增 -->
 										<p class="text-right">
-											<a href="./ticketInput.html"
-												th:href="@{/ticketList/ticketInput}" class="btn btn-primary">新增</a>
-											<!-- </p> -->
-											<!-- <p class="text-right"> -->
-											<button class="btn btn-primary"
-												onclick="x.DownloadCSV('csv');">匯出CSV</button>
-											<span>
-												<button class="btn btn-primary"
-													onclick="x.DownloadJSON('json');">匯出JSON</button>
+											<a href="./ticketInput.html" th:href="@{/ticketList/ticketInput}"
+												class="btn btn-primary">新增</a>
 										</p>
-										<div class="table-responsive">
-											<!-- <div id="basic"> -->
-											<table id="basic" class="table table-bordered table-striped">
-												<thead>
-													<tr>
-														<th>#</th>
-														<th>景點套票名稱</th>
-														<th>景點套票簡介</th>
-														<!-- <th>店家營業日期</th> -->
-														<th>店家起始營業時間</th>
-														<th>店家結束營業時間</th>
-														<th>電話</th>
-														<th>國家</th>
-														<th>城市</th>
-														<th>地區</th>
-														<th>地址</th>
-														<th>價格</th>
-														<!-- <th>圖片</th> -->
-														<th>標籤編號</th>
-														<th>標籤名稱</th>
-														<th>上架時間</th>
-														<th>下架時間</th>
-														<!-- <th>新增日期</th> -->
-													</tr>
-												</thead>
-												<tbody>
-													<tr th:each="ticket,iterStat:${page.content}">
-														<td th:text="${iterStat.count}">1</td>
-														<td><a href="#" th:text="${ticket.ticketName}"
-															th:href="@{'/ticketList/' + ${ticket.ticketNo}}">景點套票名稱</a></td>
-														<!-- 資料收起有問題 -->
-														<!-- <span id="textMain"> -->
-														<div id="box">
-															<td class="ellipsis" th:text="${ticket.ticketIntro}"
-																id="textMain" style="width: 350px; height: 35px;">景點套票敘述
-																<!-- </span> --> <!-- </div>	 -->
-																<div id="menu">
-																	<span class="textBtn" id="unfold">(展開)</span> <span
-																		class="textBtn none" id="packUp">(收起)</span>
-																</div>
-															</td>
-															<!-- <td th:text="${ticket.ticketOpenWeek}">店家營業日期</td> -->
-															<td th:text="${ticket.ticketOpenTime}">店家起始營業時間</td>
-															<td th:text="${ticket.ticketEndTime}">店家結束營業時間</td>
-															<td th:text="${ticket.phone}">電話</td>
-															<td th:text="${ticket.country}">國家</td>
-															<td th:text="${ticket.city}">城市</td>
-															<td th:text="${ticket.location}">地區</td>
-															<td th:text="${ticket.address}">地址</td>
-															<td th:text="${ticket.price}">價格</td>
-															<td th:text="${ticket.tagNo}">標籤編號</td>
-															<td th:text="${ticket.tagName}">標籤名稱</td>
-															<td th:text="${ticket.ticketStartDate}">上架時間</td>
-															<td th:text="${ticket.ticketEndDate}">下架時間</td>
-															<!-- <td th:text="${ticket.newDate}">新增日期</td> -->
-															<!-- <td th:text="${ticket.imagePath}">圖片</td> -->
-															<!-- 編輯、刪除 -->
-															<td><a href="#"	th:href="@{/ticketList/{ticketNo}/ticketInput(ticketNo=${ticket.ticketNo})}">更新</a>&nbsp;
-																<a href="#" th:href="@{/ticketList/{ticketNo}/delete(ticketNo=${ticket.ticketNo})}">删除</a>
-															<!-- onclick="javascript:return del();" -->
-															</td>
-													</tr>
-												</tbody>
-											</table>
+									</div>
+								
+								<div class="table-responsive">
+									<!-- <div id="basic"> -->
+									<table id="basic" class="table table-bordered table-striped">
+										<thead>
+											<tr>
+												<th>#</th>
+												<th>景點套票名稱</th>
+												<th>景點套票簡介</th>
+												<th>店家營業日期</th>
+												<th>店家起始營業時間</th>
+												<th>店家結束營業時間</th>
+												<th>電話</th>
+												<th>國家</th>
+												<th>城市</th>
+												<th>地區</th>
+												<th>地址</th>
+												<th>價格</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr th:each="ticket,iterStat:${page.content}">
+												<td th:text="${iterStat.count}">1</td>
+												<td><a href="#" th:text="${ticket.ticketName}"
+														th:href="@{'/ticketList/' + ${ticket.ticketNo}}">景點套票名稱</a>
+												</td>
+												<td th:text="${ticket.ticketIntro}">景點套票敘述</td>
+												<td th:text="${ticket.ticketOpenWeek}">店家營業日期</td>
+												<td th:text="${ticket.ticketOpenTime}">店家起始營業時間</td>
+												<td th:text="${ticket.ticketEndTime}">店家結束營業時間</td>
+												<td th:text="${ticket.phone}">電話</td>
+												<td th:text="${ticket.country}">國家</td>
+												<td th:text="${ticket.city}">城市</td>
+												<td th:text="${ticket.location}">地區</td>
+												<td th:text="${ticket.address}">地址</td>
+												<td th:text="${ticket.price}">價格</td>
+												<td><a href="#"
+														th:href="@{/ticketList/{ticketNo}/ticketInput(ticketNo=${ticket.ticketNo})}">更新</a>&nbsp;
+													<a href="#"
+														th:href="@{/ticketList/{ticketNo}/delete(ticketNo=${ticket.ticketNo})}">删除</a>
+												</td>
+											</tr>
+										</tbody>
 
-											<!-- 上一頁、下一頁 BookController.java內同步設定-->
-											<!-- 首頁不會出現上一頁按鈕 th:unless="${page.first}" 末頁不會出現下一頁按鈕 th:unless="${page.last}" -->
-											<!-- <nav>
-												<ul class="pager">
+									</table>
+
+									<p class="text-right"><button class="btn btn-primary"
+											onclick="x.DownloadCSV('csv');">导出(CSV)</button><button
+											class="btn btn-primary" onclick="x.DownloadJSON('json');">导出(JSON)</button>
+									</p>
+									<!-- 上一頁、下一頁 BookController.java內同步設定-->
+									<!-- 首頁不會出現上一頁按鈕 th:unless="${page.first}" 末頁不會出現下一頁按鈕 th:unless="${page.last}" -->
+									<!-- <nav>
+											<ul class="pager">
 												<li class="previous"><a href="#"
 														th:href="@{'/ticketList?page='+ ${page.number-1}}"
 														th:unless="${page.first}">上一頁</a></li>
 												<li class="next"><a href="#"
 														th:href="@{/ticketList(page=${page.number} + 1)}"
 														th:unless="${page.last}">下一頁</a></li>
-												</ul>
-											</nav>
-										</div> -->
-										</div>
-
-										<!-- CSV、JSON匯出 -->
-										<div>
-											<table id="myTable" hidden="hidden"
-												class="table table-bordered table-striped"
-												style="display: none">
-												<thead>
-													<tr>
-														<th>#</th>
-														<th>景點套票名稱</th>
-														<th>景點套票簡介</th>
-														<!-- <th>店家營業日期</th> -->
-														<th>店家起始營業時間</th>
-														<th>店家結束營業時間</th>
-														<th>電話</th>
-														<th>國家</th>
-														<th>城市</th>
-														<th>地區</th>
-														<th>地址</th>
-														<th>價格</th>
-														<!-- <th>圖片</th> -->
-														<th>標籤編號</th>
-														<th>標籤名稱</th>
-														<th>上架時間</th>
-														<th>下架時間</th>
-														<!-- <th>新增日期</th> -->
-													</tr>
-												</thead>
-												<tbody>
-													<tr th:each="ticket,iterStat:${page.content}">
-														<td th:text="${iterStat.count}">1</td>
-														<td th:text="${ticket.ticketName}">景點套票名稱</td>
-														<td th:text="${ticket.ticketIntro}">景點套票敘述</td>
-														<!-- <td th:text="${ticket.ticketOpenWeek}">店家營業日期</td> -->
-														<td th:text="${ticket.ticketOpenTime}">店家起始營業時間</td>
-														<td th:text="${ticket.ticketEndTime}">店家結束營業時間</td>
-														<td th:text="${ticket.phone}">電話</td>
-														<td th:text="${ticket.country}">國家</td>
-														<td th:text="${ticket.city}">城市</td>
-														<td th:text="${ticket.location}">地區</td>
-														<td th:text="${ticket.address}">地址</td>
-														<td th:text="${ticket.price}">價格</td>
-														<!-- <td th:text="${ticket.ticketImage}">圖片</td> -->
-														<td th:text="${ticket.tagNo}">標籤編號</td>
-														<td th:text="${ticket.tagName}">標籤名稱</td>
-														<td th:text="${ticket.ticketStartDate}">上架時間</td>
-														<td th:text="${ticket.ticketEndDate}">下架時間</td>
-														<!-- <td th:text="${ticket.newDate}">新增日期</td> -->
-													</tr>
-												</tbody>
-											</table>
-										</div>
-									</div>
+											</ul>
+										</nav>
+									</div> -->
 								</div>
 							</div>
 						</div>
-						<!-- Footer -->
-						<footer th:replace="backend/partials/fragment :: footer"></footer>
-						<!-- partial -->
 					</div>
 				</div>
+				<footer th:replace="backend/partials/fragment :: footer"></footer>
+				<!-- partial -->
 			</div>
-			<script th:src="@{/vendors/js/vendor.bundle.base.js}"
-				src="vendors/js/vendor.bundle.base.js"></script>
-			<script th:src="@{/js/off-canvas.js}" src="vendors/js/off-canvas.js"></script>
-			<script th:src="@{/static/js/hoverable-collapse.js}"
-				src="../../static/js/hoverable-collapse.js"></script>
-			<script th:src="@{/static/js/template.js}"
-				src="../../static/js/template.js"></script>
-			<script th:src="@{/static/js/settings.js}"
-				src="../../static/js/settings.js"></script>
+		</div>
+	</div>
+	<script th:src="@{/vendors/js/vendor.bundle.base.js}" src="vendors/js/vendor.bundle.base.js"></script>
+	<script th:src="@{/js/off-canvas.js}" src="vendors/js/off-canvas.js"></script>
+	<script th:src="@{/js/hoverable-collapse.js}" src="js/hoverable-collapse.js"></script>
+	<script th:src="@{/js/template.js}" src="js/template.js"></script>
+	<script th:src="@{/js/settings.js}" src="js/settings.js"></script>
 
-			<script th:src="@{/vendors/datatables.net/jquery.dataTables.js}"
-				src="vendors/datatables.net/jquery.dataTables.js"></script>
-			<script
-				th:src="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.js}"
-				src="vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
-			<script th:src="@{/js/dataTables.select.min.js}"
-				src="js/dataTables.select.min.js"></script>
-			<script th:src="@{/js/dashboard-comment.js}"
-				src="js/dashboard-comment.js"></script>
-			<script th:src="@{/vendors/sweetalert/sweetalert2.all.min.js}"
-				src="vendors/sweetalert/sweetalert2.all.min.js"></script>
-			<!--   <script th:src="@{//cdn.jsdelivr.net/npm/sweetalert2@11}" src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
+	<script th:src="@{/vendors/datatables.net/jquery.dataTables.js}"
+		src="vendors/datatables.net/jquery.dataTables.js"></script>
+	<script th:src="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.js}"
+		src="vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
+	<script th:src="@{/js/dataTables.select.min.js}" src="js/dataTables.select.min.js"></script>
+	<script th:src="@{/js/dashboard-comment.js}" src="js/dashboard-comment.js"></script>
+	<script th:src="@{/vendors/sweetalert/sweetalert2.all.min.js}"
+		src="vendors/sweetalert/sweetalert2.all.min.js"></script>
+	<!--   <script th:src="@{//cdn.jsdelivr.net/npm/sweetalert2@11}" src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
 
-			<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-			<script
-				src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-			<!-- 跟bootstrap一樣，固定src位置 th:src="@{/js/bootstrap.min.js}" -->
-			<!-- TABLE樣式 -->
-			<script th:src="@{/js/ticketTableJS/bootstrap.min.js}"></script>
-			<script src="https://demeter.5fpro.com/tw/zipcode-selector.js"></script>
-			<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-			<script th:src="@{/vendors/js/vendor.bundle.base.js}"
-				src="../static/vendors/js/vendor.bundle.base.js"></script>
-			<!-- <script src="../static/js/jstable.min.js"></script> -->
-			<script th:src="@{/js/ticketTableJS/jstable.min.js}"></script>
+	<!-- 跟bootstrap一樣，固定src位置 th:src="@{/js/bootstrap.min.js}" -->
+	<!-- TABLE樣式 -->
+	<script th:src="@{/js/ticketTableJS/bootstrap.min.js}"></script>
+	<script src="https://demeter.5fpro.com/tw/zipcode-selector.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+	<script th:src="@{/vendors/js/vendor.bundle.base.js}" src="../static/vendors/js/vendor.bundle.base.js"></script>
+	<!-- <script src="../static/js/jstable.min.js"></script> -->
+	<script th:src="@{/js/ticketTableJS/jstable.min.js}"></script>
 
-			<!-- CSV JSON -->
-			<!-- <script th:src="@{/js/ticketTableJS/buttonToCsvJson.js}"></script> -->
-			<script th:src="@{/js/ticketTableJS/index.js}"></script>
-			<script th:src="@{/js/ticketTableJS/bootstrap.bundle.min.js}"></script>
-			<!-- <script th:src="@{/js/ticketTableJS/index.js}"></script>
+	<!-- CSV JSON -->
+	<!-- <script th:src="@{/js/ticketTableJS/buttonToCsvJson.js}"></script> -->
+	<script th:src="@{/js/ticketTableJS/index.js}"></script>
+	<script th:src="@{/js/ticketTableJS/bootstrap.bundle.min.js}"></script>
+	<!-- <script th:src="@{/js/ticketTableJS/index.js}"></script>
 			<script th:src="@{/js/ticketTableJS/bootstrap.bundle.min.js}"></script> -->
 
-			<!-- TABLE JS -->
-			<script>
-				new JSTable("#basic");
-			</script>
-			<!-- CSV JSON Script -->
-			<script>
-				let x = new RdataTB('myTable');
-			</script>
+	<!-- TABLE JS -->
+	<script>new JSTable("#basic");
+	</script>
+	<!-- CSV JSON Script -->
+	<script>let x = new RdataTB('myTable');</script>
 
-				<!-- 確認刪除訊息 -->
-<!-- 				function del() { -->
-<!-- 					var msg = "您真的確定要刪除嗎？\n\n請確認！"; -->
-<!-- 					if (confirm(msg)==true){ -->
-<!-- 					return true; -->
-<!-- 					}else{ -->
-<!-- 					return false; -->
-<!-- 					} -->
-<!-- 				} -->
-			<!-- 字數太長 -->
-			<script>
-				let box = document.querySelectorAll('#text')[0] //容器
-				let isOverflow = document.querySelectorAll('#textMain')[0] //文本
-				let btn1 = document.querySelectorAll('#unfold')[0] //展开按钮
-				let btn2 = document.querySelectorAll('#packUp')[0] //收起按钮
-				let menuBox = document.querySelectorAll('#menu')[0] //菜单
-				let cWidth = box.clientWidth;//获取容器宽度
-				let sWidth = isOverflow.scrollWidth;//获取文本宽度
-				if (sWidth >= cWidth) { //当文本长度大于容器长度时 显示缩率标题
-					isOverflow.classList.add('showText')
-					menuBox.style.display = 'block'
-				} else {
-					isOverflow.classList.add('noText')
-					menuBox.style.display = 'none'
-				}
-				btn1.onclick = function() {
-					btn2.style.display = 'block'
-					btn1.style.display = 'none'
-					isOverflow.classList.remove('showText')
-					isOverflow.classList.add('noText')
-				}
-				btn2.onclick = function() {
-					btn1.style.display = 'block'
-					btn2.style.display = 'none'
-					isOverflow.classList.remove('noText')
-					isOverflow.classList.add('showText')
-				}
-			</script>
 </body>
+
 </html>
