--- a/src/main/resources/templates/frontend/hotel-Index.html
+++ b/src/main/resources/templates/frontend/hotel-Index.html
@@ -13,15 +13,16 @@
 
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css}" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/hotelCSS/fullpage.css}">
     <link rel="stylesheet" th:href="@{/css/hotelCSS/custom.css}">
 	 <style th:inline="text">
 
         @font-face {
           font-family: 'Gotham Medium';
-          src: url('Gotham-Medium.woff2') format('woff2'),
-          url('Gotham-Medium.woff') format('woff');
+          src: url('[[@{/css/hotelCSS/Gotham-Medium.woff2}]]') format('woff2'),
+          url('[[@{/css/hotelCSS/Gotham-Medium.woff}]]') format('woff');
+
           font-weight: 500;
           font-style: normal;
           font-display: swap;
@@ -29,8 +30,8 @@
 
         @font-face {
           font-family: 'Gotham Book';
-          src: url('Gotham-Book.woff2') format('woff2'),
-          url('Gotham-Book.woff') format('woff');
+          src: url('[[@{/css/hotelCSS/Gotham-Book.woff2}]]') format('woff2'),
+          url('[[@{/css/hotelCSS/Gotham-Book.woff}]]') format('woff');
           font-weight: 500;
           font-style: normal;
           font-display: swap;
@@ -360,9 +361,9 @@
    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <link rel="stylesheet" th:src="@{/js/hotelJS/fullpage.js}">
-    <script th:src="@{https://code.jquery.com/jquery-3.3.1.slim.min.js}" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script th:src="@{https://cdn.jsdelivr.net/npm/popper.js1.14.7/dist/umd/popper.min.js}" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script th:src="@{https://cdn.jsdelivr.net/npm/bootstrap4.3.1/dist/js/bootstrap.min.js}" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <link   th:href="@{/js/hotelJS/fullpage.js} " rel="stylesheet">
+    <script th:href="@{https://code.jquery.com/jquery-3.3.1.slim.min.js}" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script th:href="@{https://cdn.jsdelivr.net/npm/popper.js1.14.7/dist/umd/popper.min.js}" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script th:href="@{https://cdn.jsdelivr.net/npm/bootstrap4.3.1/dist/js/bootstrap.min.js}" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
