--- a/src/main/resources/templates/frontend/index.html
+++ b/src/main/resources/templates/frontend/index.html
@@ -710,7 +710,7 @@
 					<div class="block2 ">
 						<div class="block2-pic hov-img0">
 <!--							照片提供網址-->
-							<a  th:href="@{tohotelDetail(id=21)}">
+							<a  th:href="@{hotel/tohotelDetail(id=38)}">
 								<img src="images/hotels/villa-taoyuan-01.jpg" alt="IMG-PRODUCT">
 								<span
 									class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
