--- a/src/main/resources/templates/backend/comment-new-form.html
+++ b/src/main/resources/templates/backend/comment-new-form.html
@@ -118,6 +118,7 @@
 											<div class="row justify-content-end mb-3">
 												<div class="col-sm-9">
 													<div class="row" id="formFile"></div>
+													<div class="invalid-feedback" id="isAdult">請勿上傳色情、暴力或任何包含成人內容的圖片</div>
 												</div>
 											</div>
 											<div class="d-flex justify-content-end mb-4">
