公告:  Hotel url 調整   前面不必+ hotel  直接導引到action 方法 所有列表 房間詳細 連結Ok  細部調整尚未完成 後台網址為 :backHotel  CRUD ok

--- a/src/main/resources/templates/backend/hotel/hotelNewAdd.html
+++ b/src/main/resources/templates/backend/hotel/hotelNewAdd.html
@@ -48,7 +48,7 @@
                             </h2>
                           </caption>
 
-                          <form  method="post"  th:action="@{/hotel/addHotel}" th:object="${hotel}"   enctype="multipart/form-data">
+                          <form  method="post"  th:action="@{/addHotel}" th:object="${hotel}"   enctype="multipart/form-data">
 
                             <td>住宿類型</td>
                             <fieldset class="form-group">
