--- a/src/main/resources/templates/backend/hotel/hotelEditForm.html
+++ b/src/main/resources/templates/backend/hotel/hotelEditForm.html
@@ -48,11 +48,11 @@
                           </h2>
                         </caption>
 
-                        <form  method="post"  th:action="@{/hotel/addHotel}" th:object="${hotel}"   enctype="multipart/form-data">
+                        <form  method="post"  th:action="@{/editHotel}" th:object="${hotel}"   enctype="multipart/form-data">
 
                           <fieldset class="form-group">
                             <label>ID</label>
-                            <input type="text" th:field="*{id}"  class="form-control" readonly  />
+                            <input type="text" th:field="*{id}" id="name" class="form-control" readonly  />
                           </fieldset>
 
 
