--- a/src/main/resources/templates/frontend/hotel-hotelList2.html
+++ b/src/main/resources/templates/frontend/hotel-hotelList2.html
@@ -63,7 +63,8 @@
 					<div class="block2">
 						<div class="card">
 							<div class="pos-relative hov-img0 card-img-top">
-								 <img width="268" height="169"  th:src="@{/hotel/picture(id=${hotelList.id})}" class="d-block w-100">
+<!--								 <img width="268" height="169"  th:src="@{/hotel/picture(id=${hotelList.id})}" class="d-block w-100">-->
+								<td> <a th:href="@{/tohotelDetail(id=${hotelList.id})}">  <img width='268' height='169' th:src="@{/picture(id=${hotelList.id})}" class="d-block w-100"> </a> </td>
 							</div>
 							<div class="card-body block2-txt flex-w flex-t p-t-14">
 								<div class="block2-txt-child1 flex-col-l ">
@@ -74,20 +75,20 @@
 										<i class="fa fa-star cl1" aria-hidden="true"></i>
 										4.8 (200+)
 										<i class="fa fa-map-marker p-l-20" aria-hidden="true"></i>
-										墾丁, 屏東
+										<td th:text="${hotelList.city}"/>
 									</span>
 									<!-- <span class="stext-105 cl3">
 										<i class="fa fa-map-marker p-l-3" aria-hidden="true"></i>
 										墾丁, 屏東
 									</span> -->
 									<span class="clblack stext-105 font-weight-bold p-t-6 ">
-										TWD $550
+										<span>$:</span> <td  th:text="${hotelList.price}"/><span>/晚</span>
 									</span>
 								</div>
-
+<!--							之後用於加入購物車-->
 								<div class="block2-txt-child2 flex-r p-t-3">
 									<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-										<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
+										<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-01.png" alt="ICON">
 										<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
 									</a>
 								</div>
@@ -96,389 +97,9 @@
 
 					</div>
 				</div>
-				<!-- Block2 -->
-				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 m-b-10 isotope-item women">
-					<div class="block2">
-						<div class="card">
-							<div class="pos-relative hov-img0 card-img-top">
-								<img th:src="@{images/tickets/taoyuan_puxin_farm.jpg}" alt="IMG-PRODUCT">
-							</div>
-							<div class="card-body block2-txt flex-w flex-t p-t-14">
-								<div class="block2-txt-child1 flex-col-l ">
-									<a th:href="@{/ticket/detail}" class="fs-17 clblack font-weight-bold hov-cl1 trans-04 js-name-b2 p-b-6">
-										桃園埔心農場
-									</a>
-									<span >
-										<i class="fa fa-star cl1" aria-hidden="true"></i>
-										4.6 (56)
-										<i class="fa fa-map-marker p-l-20" aria-hidden="true"></i>
-										桃園, 楊梅
-									</span>
-									<span class="clblack stext-105 font-weight-bold p-t-6">
-										TWD $599
-									</span>
-								</div>
 
-								<div class="block2-txt-child2 flex-r p-t-3">
-									<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-										<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
-										<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
 
-				<!-- Block2 -->
-				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 m-b-10 isotope-item women">
-					<div class="block2">
-						<div class="card">
-							<div class="pos-relative hov-img0 card-img-top">
-								<img th:src="@{images/tickets/tainan_art.jpg}" alt="IMG-PRODUCT">
-							</div>
-							<div class="card-body block2-txt flex-w flex-t p-t-14">
-								<div class="block2-txt-child1 flex-col-l ">
-									<a th:href="@{/ticket/detail}" class="fs-17 clblack font-weight-bold hov-cl1 trans-04 js-name-b2 p-b-6">
-										臺南市美術館當期展覽
-									</a>
-									<span >
-										<i class="fa fa-star cl1" aria-hidden="true"></i>
-										4.9 (100+)
-										<i class="fa fa-map-marker p-l-20" aria-hidden="true"></i>
-										台南, 中西
-									</span>
-									<span class="clblack stext-105 font-weight-bold p-t-6">
-										TWD $250
-									</span>
-								</div>
 
-								<div class="block2-txt-child2 flex-r p-t-3">
-									<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-										<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
-										<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- Block2 -->
-				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 m-b-10 isotope-item women">
-					<div class="block2">
-						<div class="card">
-							<div class="pos-relative hov-img0 card-img-top">
-								<img th:src="@{images/tickets/art.jpg}" alt="IMG-PRODUCT">
-							</div>
-							<div class="card-body block2-txt flex-w flex-t p-t-14">
-								<div class="block2-txt-child1 flex-col-l ">
-									<a th:href="@{/ticket/detail}" class="fs-17 clblack font-weight-bold hov-cl1 trans-04 js-name-b2 p-b-6">
-										橫山書法藝術館
-									</a>
-									<span >
-										<i class="fa fa-star cl1" aria-hidden="true"></i>
-										4.4 (100+)
-										<i class="fa fa-map-marker p-l-20" aria-hidden="true"></i>
-										桃園, 大園
-									</span>
-									<span class="clblack stext-105 font-weight-bold p-t-6">
-										TWD $350
-									</span>
-								</div>
-
-								<div class="block2-txt-child2 flex-r p-t-3">
-									<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-										<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
-										<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- Block2 -->
-				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 m-b-10 isotope-item women">
-					<div class="block2">
-						<div class="card">
-							<div class="pos-relative hov-img0 card-img-top">
-								<img th:src="@{images/tickets/dongyanshan.jpg}" alt="IMG-PRODUCT">
-							</div>
-							<div class="card-body block2-txt flex-w flex-t p-t-14">
-								<div class="block2-txt-child1 flex-col-l ">
-									<a th:href="@{/ticket/detail}" class="fs-17 clblack font-weight-bold hov-cl1 trans-04 js-name-b2 p-b-6">
-										東眼山國家森林遊樂區
-									</a>
-									<span >
-										<i class="fa fa-star cl1" aria-hidden="true"></i>
-										4.9 (100+)
-										<i class="fa fa-map-marker p-l-20" aria-hidden="true"></i>
-										桃園, 復興
-									</span>
-									<span class="clblack stext-105 font-weight-bold p-t-6">
-										TWD $250
-									</span>
-								</div>
-
-								<div class="block2-txt-child2 flex-r p-t-3">
-									<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-										<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
-										<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- Block2 -->
-				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 m-b-10 isotope-item women">
-					<div class="block2">
-						<div class="card">
-							<div class="pos-relative hov-img0 card-img-top">
-								<img th:src="@{images/tickets/taipei_arena.jpg}" alt="IMG-PRODUCT">
-							</div>
-							<div class="card-body block2-txt flex-w flex-t p-t-14">
-								<div class="block2-txt-child1 flex-col-l ">
-									<a th:href="@{/ticket/detail}" class="fs-17 clblack font-weight-bold hov-cl1 trans-04 js-name-b2 p-b-6">
-										小巨蛋冰上樂園
-									</a>
-									<span >
-										<i class="fa fa-star cl1" aria-hidden="true"></i>
-										4.5 (100+)
-										<i class="fa fa-map-marker p-l-20" aria-hidden="true"></i>
-										臺北, 松山
-									</span>
-									<span class="clblack stext-105 font-weight-bold p-t-6">
-										TWD $380
-									</span>
-								</div>
-
-								<div class="block2-txt-child2 flex-r p-t-3">
-									<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-										<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
-										<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
-									</a>
-								</div>
-							</div>
-						</div>
-
-					</div>
-				</div>
-				
-				<!-- Block2 -->
-				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
-					<div class="block2">
-						<div class="card">
-							<div class="pos-relative hov-img0 card-img-top">
-								<img th:src="@{images/tickets/car_racing.jpg}" alt="IMG-PRODUCT">
-							</div>
-							<div class="card-body block2-txt flex-w flex-t p-t-14">
-								<div class="block2-txt-child1 flex-col-l ">
-									<a th:href="@{/ticket/detail}" class="fs-17 clblack font-weight-bold hov-cl1 trans-04 js-name-b2 p-b-6">
-										國際賽車場卡丁車體驗
-									</a>
-									<span >
-										<i class="fa fa-star cl1" aria-hidden="true"></i>
-										4.4 (100+)
-										<i class="fa fa-map-marker p-l-20" aria-hidden="true"></i>
-										台中, 后里
-									</span>
-									<span class="clblack stext-105 font-weight-bold p-t-6">
-										TWD $650
-									</span>
-								</div>
-
-								<div class="block2-txt-child2 flex-r p-t-3">
-									<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-										<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
-										<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- Block2 -->
-				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 m-b-10 isotope-item women">
-					<div class="block2">
-						<div class="card">
-							<div class="pos-relative hov-img0 card-img-top">
-								<img th:src="@{images/tickets/Xpark_1.jpg}" alt="IMG-PRODUCT">
-							</div>
-							<div class="card-body block2-txt flex-w flex-t p-t-14">
-								<div class="block2-txt-child1 flex-col-l ">
-									<a th:href="@{/ticket/detail}" class="fs-17 clblack font-weight-bold hov-cl1 trans-04 js-name-b2 p-b-6">
-										Xpark都會型水生公園
-									</a>
-									<span >
-										<i class="fa fa-star cl1" aria-hidden="true"></i>
-										4.6 (56)
-										<i class="fa fa-map-marker p-l-20" aria-hidden="true"></i>
-										桃園, 青埔
-									</span>
-									<span class="clblack stext-105 font-weight-bold p-t-6">
-										TWD $450
-									</span>
-								</div>
-
-								<div class="block2-txt-child2 flex-r p-t-3">
-									<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-										<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
-										<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- Block2 -->
-				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 m-b-10 isotope-item women">
-					<div class="block2">
-						<div class="card">
-							<div class="pos-relative hov-img0 card-img-top">
-								<img th:src="@{images/tickets/beach_atv.jpg}" alt="IMG-PRODUCT">
-							</div>
-							<div class="card-body block2-txt flex-w flex-t p-t-14">
-								<div class="block2-txt-child1 flex-col-l ">
-									<a th:href="@{/ticket/detail}" class="fs-17 clblack font-weight-bold hov-cl1 trans-04 js-name-b2 p-b-6">
-										東澳海灘＆叢林野地ATV
-									</a>
-									<span >
-										<i class="fa fa-star cl1" aria-hidden="true"></i>
-										5.0 (36)
-									</span>
-									<span class="stext-105 cl3">
-										<i class="fa fa-map-marker p-l-3" aria-hidden="true"></i>
-										宜蘭, 蘇澳
-									</span>
-									<span class="clblack stext-105 p-t-6">
-										TWD $980
-									</span>
-								</div>
-
-								<div class="block2-txt-child2 flex-r p-t-3">
-									<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-										<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
-										<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- Block2 -->
-				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 m-b-10 isotope-item women">
-					<div class="block2">
-						<div class="card">
-							<div class="pos-relative hov-img0 card-img-top">
-								<img th:src="@{images/tickets/taipei_arena.jpg}" alt="IMG-PRODUCT">
-							</div>
-							<div class="card-body block2-txt flex-w flex-t p-t-14">
-								<div class="block2-txt-child1 flex-col-l ">
-									<a th:href="@{/ticket/detail}" class="fs-17 clblack font-weight-bold hov-cl1 trans-04 js-name-b2 p-b-6">
-										小巨蛋冰上樂園
-									</a>
-									<span >
-										<i class="fa fa-star cl1" aria-hidden="true"></i>
-										4.5 (100+)
-									</span>
-									<span class="stext-105 cl3">
-										<i class="fa fa-map-marker p-l-3" aria-hidden="true"></i>
-										臺北, 松山
-									</span>
-									<span class="clblack stext-105 p-t-6">
-										TWD $380
-									</span>
-								</div>
-
-								<div class="block2-txt-child2 flex-r p-t-3">
-									<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-										<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
-										<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
-									</a>
-								</div>
-							</div>
-						</div>
-
-					</div>
-				</div>
-				
-				<!-- Block2 -->
-				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
-					<div class="block2">
-						<div class="card">
-							<div class="pos-relative hov-img0 card-img-top">
-								<img th:src="@{images/tickets/car_racing.jpg}" alt="IMG-PRODUCT">
-							</div>
-							<div class="card-body block2-txt flex-w flex-t p-t-14">
-								<div class="block2-txt-child1 flex-col-l ">
-									<a th:href="@{/ticket/detail}" class="fs-17 clblack font-weight-bold hov-cl1 trans-04 js-name-b2 p-b-6">
-										野柳地質公園
-									</a>
-									<span >
-										<i class="fa fa-star cl1" aria-hidden="true"></i>
-										4.4 (100+)
-									</span>
-									<span class="stext-105 cl3">
-										<i class="fa fa-map-marker p-l-3" aria-hidden="true"></i>
-										台中, 后里
-									</span>
-									<span class="clblack stext-105 p-t-6">
-										TWD $650
-									</span>
-								</div>
-
-								<div class="block2-txt-child2 flex-r p-t-3">
-									<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-										<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
-										<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- Block2 -->
-				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 m-b-10 isotope-item women">
-					<div class="block2">
-						<div class="card">
-							<div class="pos-relative hov-img0 card-img-top">
-								<img th:src="@{images/tickets/Xpark_1.jpg}" alt="IMG-PRODUCT">
-							</div>
-							<div class="card-body block2-txt flex-w flex-t p-t-14">
-								<div class="block2-txt-child1 flex-col-l ">
-									<a th:href="@{/ticket/detail}" class="fs-17 clblack font-weight-bold hov-cl1 trans-04 js-name-b2 p-b-6">
-										Xpark都會型水生公園
-									</a>
-									<span >
-										<i class="fa fa-star cl1" aria-hidden="true"></i>
-										4.6 (56)
-									</span>
-									<span class="stext-105 cl3">
-										<i class="fa fa-map-marker p-l-3" aria-hidden="true"></i>
-										桃園, 青埔
-									</span>
-									<span class="clblack stext-105 p-t-6">
-										TWD $450
-									</span>
-								</div>
-
-								<div class="block2-txt-child2 flex-r p-t-3">
-									<a href="#" class="btn-addwish-b2 dis-block pos-relative js-addwish-b2">
-										<img class="icon-heart1 dis-block trans-04" src="images/icons/icon-heart-01.png" alt="ICON">
-										<img class="icon-heart2 dis-block trans-04 ab-t-l" src="images/icons/icon-heart-02.png" alt="ICON">
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
 				</tr>
 			</div>
 
