--- a/src/main/resources/templates/frontend/hotel-roomDetail.html
+++ b/src/main/resources/templates/frontend/hotel-roomDetail.html
@@ -55,7 +55,7 @@
 
 							<div class="carousel-inner">
 								<div class="carousel-item active">
-									<td>  <img  th:src="@{/hotel/picture(id=${hotel.id})}" class="d-block w-100">  </td>
+									<td>  <img  th:src="@{/picture(id=${hotel.id})}" class="d-block w-100">  </td>
 								</div>
 
 							</div>
