細部調整 完成版

--- a/src/main/resources/templates/frontend/index.html
+++ b/src/main/resources/templates/frontend/index.html
@@ -677,7 +677,7 @@
 				</h3>
 				<div class="flex-w flex-l-m filter-tope-group m-tb-10">
 					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5 how-active1" data-filter="*">
-						<a th:href="@{/hotel/findHotelList}">所有住宿</a>
+						<a th:href="@{/findHotelList}">所有住宿</a>
 					</button>
 					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".hotel">
 						星級飯店
@@ -710,7 +710,7 @@
 					<div class="block2 ">
 						<div class="block2-pic hov-img0">
 <!--							照片提供網址-->
-							<a  th:href="@{hotel/tohotelDetail(id=38)}">
+							<a  th:href="@{/tohotelDetail(id=1)}">
 								<img src="images/hotels/villa-taoyuan-01.jpg" alt="IMG-PRODUCT">
 								<span
 									class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal1">
